--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
   <head>
+    <!-- Google tag (gtag.js) -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <title>Connect</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJZ3HHSFDX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FJZ3HHSFDX');
+    </script>
     <link href="/style.css" rel="stylesheet" />
     <script defer src="/bundles/main.bundle.js"></script>
     <style>
