--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1"
     />
     <title>Connect</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJZ3HHSFDX"></script>
